attempt to fix background cutoff bug

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -17,7 +17,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   z-index: 0;
   &.Stone {
     background: url('stone-pixel-bg.png');
